discussion/kv_engine/177335/177335_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Expiry should not be free

Change-Id: I5c25d189dc73b8b213b7687e83a3e8df7177cd3c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-11 11:54:13.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 12:01:10.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47749/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47749/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40108/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40108/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8613/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8613/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20073/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20073/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20831/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20831/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21188/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8710/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8710/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21878/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21878/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29228/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18929/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41: error: unknown type name "EngineIface" [clang-diagnostic-error]
    virtual void document_expired(const EngineIface& engine, size_t nbytes) = 0;
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18929/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41:
error: unknown type name "EngineIface" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18929/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18085/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
